deploy: 2c9a1594df1144da952ef67a2b63641c6c9b09be

--- a/events-archive.html
+++ b/events-archive.html
@@ -68,6 +68,23 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
+                            <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/308208478/">IntelliJ as a game engine + 1 more</a>
+                </div>
+                <span>
+                    Oniryx, Gembloux - Thu 19 June 2025
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    IntelliJ as a game engine
+                                        <span class="small">by Alexander Chatzizacharias</span>
+                                </li>
+                                <li class="ms-4">
+                                    Could be you!
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                             <a class="link-primary" href="https://www.meetup.com/belgian-java-user-group/events/307909476/">INFORMAL - 30 Years of Java @ Bier Central (Antwerp)</a>
                 </div>
                 <span>
