--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/308208478/">IntelliJ as a game engine + 1 more</a>
+                            </div>
+                            <span>
+                                Oniryx, Gembloux - Thu 19 June 2025
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                IntelliJ as a game engine
+                                                    <span class="small">by Alexander Chatzizacharias</span>
+                                            </li>
+                                            <li class="ms-4">
+                                                Could be you!
+                                            </li>
+                                    </ul>
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/BeJUG/bejug.github.io/blob/main/data/events.yml">Add event</a>
                     /
